resolve W3C error and correct syntax errors

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </ul>
             </div>
         </section>
-        
+
         <section class="restaurants" id="restaurants">
             <h2 id="restaurants-title">Restaurants</h2>
             <div class="container">
@@ -117,19 +117,19 @@
                         </div>
                     </a>
                     <input type="checkbox" id="heart2" class="heart-checkbox">
-                            <label for="heart2" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                    <label for="heart2" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
                 <article class="card">
                     <a href="restaurants/francaise.html">
                         <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                             alt="Photo du restaurant à la francaise">
                         <h3 class="card-txt">
-                            A la francaise<br class="flop">
+                            A la francaise<br>
                             <span class="card-txt__subtitle">Cité Rouge</span>
                         </h3>
                     </a>
                     <input type="checkbox" id="heart3" class="heart-checkbox">
-                            <label for="heart3" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                    <label for="heart3" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
                 <article class="card">
                     <a href="restaurants/delice.html">
@@ -142,7 +142,7 @@
                         </h3>
                     </a>
                     <input type="checkbox" id="heart4" class="heart-checkbox">
-                            <label for="heart4" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                    <label for="heart4" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </article>
             </div>
         </section>
