--- a/restaurants/delice.html
+++ b/restaurants/delice.html
@@ -8,16 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Shrikhand&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <title>Menu - La palette du goût</title>
+    <title>Menu - Le délice des sens</title>
 </head>
 
 <body>
-
     <header>
         <nav>
             <a href="../index.html">
@@ -28,34 +27,30 @@
     </header>
 
     <div class="top_image">
-        <img src="../assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Photo du Restaurant La palette du goût">
+        <img src="../assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+            alt="Photo du Restaurant Le délice des sens">
     </div>
 
     <main>
-
         <section class="container">
-
             <div class="menu-title">
                 <div class="menu-title__text">
-                    <h1>La palette du goût</h1>
+                    <h1>Le délice des sens</h1>
                     <input type="checkbox" id="heart" class="heart-checkbox">
                     <label for="heart" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
                 </div>
             </div>
 
             <section class="menu-card">
-
-                <div class="title-part E">
-                    <h2 class="type-menu">Entrées</h2>
-                </div>
+                <h2 class="type-menu">Entrées</h2>
 
                 <article class="card">
-                    <input type="checkbox" id="plat" class="checkbox">
-                    <label for="plat" class="menu-label">
+                    <input type="checkbox" id="plat1" class="checkbox">
+                    <label for="plat1" class="menu-label">
                         <span class="contain">
                             <h3 class="card-txt">
-                                Fricassée d'escargots<br>
-                                <span class="card-txt__subtitle">Au piment d'Espelette</span>
+                                Tartare de thon<br>
+                                <span class="card-txt__subtitle">Assaisonné au yuzu</span>
                             </h3>
                             <span class="price">
                                 <span class="card-price">25€</span>
@@ -70,8 +65,8 @@
                     <label for="plat2" class="menu-label">
                         <span class="contain">
                             <h3 class="card-txt">
-                                Foie gras de canard mi-cuit<br>
-                                <span class="card-txt__subtitle">Et ses copeaux de truffe noire</span>
+                                Bouchée de homard croustillant<br>
+                                <span class="card-txt__subtitle">Et sa farandole de petits légumes</span>
                             </h3>
                             <span class="price">
                                 <span class="card-price">35€</span>
@@ -85,12 +80,12 @@
                     <input type="checkbox" id="plat3" class="checkbox">
                     <label for="plat3" class="menu-label">
                         <span class="contain">
-                            <h3 class="card-txt">Œuf au plat<br>
-                                <span class="card-txt__subtitle">Assaisonné à la truffe sur lit de
-                                    caviar</span>
+                            <h3 class="card-txt">
+                                Poulet rôti aux herbes de Provence<br>
+                                <span class="card-txt__subtitle">Et sa crème de truffe</span>
                             </h3>
                             <span class="price">
-                                <span class="card-price">20€</span>
+                                <span class="card-price">40€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
                         </span>
@@ -105,15 +100,14 @@
                     <input type="checkbox" id="plat4" class="checkbox">
                     <label for="plat4" class="menu-label">
                         <span class="contain">
-                            <h3 class="card-txt">Filet de bœuf aux herbes<br>
-                                <span class="card-txt__subtitle">Accompagné de sa
-                                    ribambelle de légumes</span>
+                            <h3 class="card-txt">
+                                Poulet rôti aux herbes de Provence<br>
+                                <span class="card-txt__subtitle">Et sa crème de truffe</span>
                             </h3>
                             <span class="price">
                                 <span class="card-price">40€</span>
                                 <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-
                         </span>
                     </label>
                 </article>
@@ -122,9 +116,9 @@
                     <input type="checkbox" id="plat5" class="checkbox">
                     <label for="plat5" class="menu-label">
                         <span class="contain">
-                            <h3 class="card-txt">Parmentier de queue de bœuf<br>
-                                <span class="card-txt__subtitle">À la truffe noire sur
-                                    sa purée de panais</span>
+                            <h3 class="card-txt">
+                                Langouste rôtie<br>
+                                <span class="card-txt__subtitle">Et ses légumes de saison</span>
                             </h3>
                             <span class="price">
                                 <span class="card-price">35€</span>
@@ -138,8 +132,9 @@
                     <input type="checkbox" id="plat6" class="checkbox">
                     <label for="plat6" class="menu-label">
                         <span class="contain">
-                            <h3 class="card-txt">Filet de turbot<br>
-                                <span class="card-txt__subtitle">Aux agrumes</span>
+                            <h3 class="card-txt">
+                                Côte de bœuf Angus<br>
+                                <span class="card-txt__subtitle">Et sa purée de panais</span>
                             </h3>
                             <span class="price">
                                 <span class="card-price">44€</span>
@@ -157,8 +152,9 @@
                     <input type="checkbox" id="plat7" class="checkbox">
                     <label for="plat7" class="menu-label">
                         <span class="contain">
-                            <h3 class="card-txt">Paris-Brest<br>
-                                <span class="card-txt__subtitle">Revisité</span>
+                            <h3 class="card-txt">
+                                Farandole de desserts<br>
+                                <span class="card-txt__subtitle">Du chef</span>
                             </h3>
                             <span class="price">
                                 <span class="card-price">18€</span>
@@ -172,9 +168,9 @@
                     <input type="checkbox" id="plat8" class="checkbox">
                     <label for="plat8" class="menu-label">
                         <span class="contain">
-                            <h3 class="card-txt">Macaron au chocolat d'exception<br>
-                                <span class="card-txt__subtitle">Et glace à la
-                                    vanille de Madagascar</span>
+                            <h3 class="card-txt">
+                                Crème brulée<br>
+                                <span class="card-txt__subtitle">Revisitée</span>
                             </h3>
                             <span class="price">
                                 <span class="card-price">22€</span>
@@ -188,9 +184,9 @@
                     <input type="checkbox" id="plat9" class="checkbox">
                     <label for="plat9" class="menu-label">
                         <span class="contain">
-                            <h3 class="card-txt">Mousse au chocolat<br>
-                                <span class="card-txt__subtitle">Au piment d'Espelette et à la
-                                    truffe noire</span>
+                            <h3 class="card-txt">
+                                Tiramisu<br>
+                                <span class="card-txt__subtitle">À la noisette</span>
                             </h3>
                             <span class="price">
                                 <span class="card-price">23€</span>
@@ -208,9 +204,8 @@
             </div>
 
         </section>
-        
     </main>
-
+    
     <footer>
         <div class="footer-container">
             <img id="LogoFooter" src="../assets/icons/ohmyfood.png" alt="Logo oh my food">
