--- a/restaurants/francaise.html
+++ b/restaurants/francaise.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/menu.scss">
+    <link rel="stylesheet" href="../styles/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,16 +19,19 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html">
+            <a href="../index.html">
                 <i class="fa-solid fa-arrow-left"></i>
             </a>
         </nav>
-        <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <img id="LogoHeader" src="../assets/icons/ohmyfood.png" alt="Logo oh my food">
     </header>
+
     <div class="top_image">
-        <img src="/assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du Restaurant À la française">
+        <img src="../assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Photo du Restaurant À la française">
     </div>
+
     <main>
+
         <section class="container">
             <div class="menu-title">
                 <div class="menu-title__text">
@@ -46,13 +50,14 @@
                         <input type="checkbox" id="plat1" class="checkbox">
                         <label for="plat1" class="menu-label">
                             <span class="contain">
-                                <p class="card-text"><strong>Tartare de poulpe acidulé</strong><br>
-                                    Aux zestes d'orange
-                                    <span class="price">
-                                        <span class="card-price">25€</span>
-                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                    </span>
-                                </p>
+                                <h3 class="card-txt">
+                                    Tartare de poulpe acidulé<br>
+                                    <span class="card-txt__subtitle">Aux zestes d'orange</span>
+                                </h3>
+                                <span class="price">
+                                    <span class="card-price">25€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
                             </span>
                         </label>
                     </article>
@@ -61,13 +66,14 @@
                         <input type="checkbox" id="plat2" class="checkbox">
                         <label for="plat2" class="menu-label">
                             <span class="contain">
-                                <p class="card-text"><strong>Velouté de légumes d'antan</strong><br>
-                                    Carotte, panais, topinambour
-                                    <span class="price">
-                                        <span class="card-price">35€</span>
-                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                    </span>
-                                </p>
+                                <h3 class="card-txt">
+                                    Velouté de légumes d'antan<br>
+                                    <span class="card-txt__subtitle">Carotte, panais, topinambour</span>
+                                </h3>
+                                <span class="price">
+                                    <span class="card-price">35€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
                             </span>
                         </label>
                     </article>
@@ -76,126 +82,136 @@
                         <input type="checkbox" id="plat3" class="checkbox">
                         <label for="plat3" class="menu-label">
                             <span class="contain">
-                                <p class="card-text"><strong>Soupe à l'oignon</strong><br>
-                                    Revisitée
-                                    <span class="price">
-                                        <span class="card-price">20€</span>
-                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                    </span>
-                                </p>
+                                <h3 class="card-txt">
+                                    Soupe à l'oignon<br>
+                                    <span class="card-txt__subtitle">Revisitée</span>
+                                </h3>
+                                <span class="price">
+                                    <span class="card-price">20€</span>
+                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                                </span>
                             </span>
                         </label>
                     </article>
 
-                <div class="title-part P">
-                    <h2 class="type-menu">Plats</h2>
-                </div>
+                    <div class="title-part P">
+                        <h2 class="type-menu">Plats</h2>
+                    </div>
 
-                <article class="card">
-                    <input type="checkbox" id="plat4" class="checkbox">
-                    <label for="plat4" class="menu-label">
-                        <span class="contain">
-                            <p class="card-text"><strong>Coquilles Saint-Jacques</strong><br>
-                                Accompagnées d'une purée de panais
+                    <article class="card">
+                        <input type="checkbox" id="plat4" class="checkbox">
+                        <label for="plat4" class="menu-label">
+                            <span class="contain">
+                                <h3 class="card-txt">
+                                    Coquilles Saint-Jacques<br>
+                                    <span class="card-txt__subtitle">Accompagnées d'une purée de panais</span>
+                                </h3>
                                 <span class="price">
                                     <span class="card-price">40€</span>
                                     <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                                 </span>
-                            </p>
-                        </span>
-                    </label>
-                </article>
+                            </span>
+                        </label>
+                    </article>
 
-                <article class="card">
-                    <input type="checkbox" id="plat5" class="checkbox">
-                    <label for="plat5" class="menu-label">
-                        <span class="contain">
-                            <p class="card-text"><strong>Magret de canard</strong><br>
-                                Et parmentier de pommes de terre
+                    <article class="card">
+                        <input type="checkbox" id="plat5" class="checkbox">
+                        <label for="plat5" class="menu-label">
+                            <span class="contain">
+                                <h3 class="card-txt">
+                                    Magret de canard<br>
+                                    <span class="card-txt__subtitle">Et parmentier de pommes de terre</span>
+                                </h3>
                                 <span class="price">
                                     <span class="card-price">35€</span>
                                     <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                                 </span>
-                            </p>
-                        </span>
-                    </label>
-                </article>
+                            </span>
+                        </label>
+                    </article>
 
-                <article class="card">
-                    <input type="checkbox" id="plat6" class="checkbox">
-                    <label for="plat6" class="menu-label">
-                        <span class="contain">
-                            <p class="card-text"><strong>Pigeonneau d'Ille-et-Vilaine</strong><br>
-                                Sur son lit de gnocchis aux légumes
+                    <article class="card">
+                        <input type="checkbox" id="plat6" class="checkbox">
+                        <label for="plat6" class="menu-label">
+                            <span class="contain">
+                                <h3 class="card-txt">
+                                    Pigeonneau d'Ille-et-Vilaine<br>
+                                    <span class="card-txt__subtitle">Sur son lit de gnocchis aux légumes</span>
+                                </h3>
                                 <span class="price">
                                     <span class="card-price">44€</span>
                                     <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                                 </span>
-                            </p>
-                        </span>
-                    </label>
-                </article>
+                            </span>
+                        </label>
+                    </article>
 
-                <div class="title-part D">
-                    <h2 class="type-menu">Dessert</h2>
-                </div>
+                    <div class="title-part D">
+                        <h2 class="type-menu">Dessert</h2>
+                    </div>
 
-                <article class="card">
-                    <input type="checkbox" id="plat7" class="checkbox">
-                    <label for="plat7" class="menu-label">
-                        <span class="contain">
-                            <p class="card-text"><strong>Pétales de violettes glacés</strong><br>
-                                Et purée de noisettes
+                    <article class="card">
+                        <input type="checkbox" id="plat7" class="checkbox">
+                        <label for="plat7" class="menu-label">
+                            <span class="contain">
+                                <h3 class="card-txt">
+                                    Pétales de violettes glacés<br>
+                                    <span class="card-txt__subtitle">Et purée de noisettes</span>
+                                </h3>
                                 <span class="price">
                                     <span class="card-price">18€</span>
                                     <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                                 </span>
-                            </p>
-                        </span>
-                    </label>
-                </article>
+                            </span>
+                        </label>
+                    </article>
 
-                <article class="card">
-                    <input type="checkbox" id="plat8" class="checkbox">
-                    <label for="plat8" class="menu-label">
-                        <span class="contain">
-                            <p class="card-text"><strong>Fondant au chocolat</strong><br>
-                                Revisité
+                    <article class="card">
+                        <input type="checkbox" id="plat8" class="checkbox">
+                        <label for="plat8" class="menu-label">
+                            <span class="contain">
+                                <h3 class="card-txt">
+                                    Fondant au chocolat<br>
+                                    <span class="card-txt__subtitle">Revisité</span>
+                                </h3>
                                 <span class="price">
                                     <span class="card-price">22€</span>
                                     <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                                 </span>
-                            </p>
-                        </span>
-                    </label>
-                </article>
+                            </span>
+                        </label>
+                    </article>
 
-                <article class="card">
-                    <input type="checkbox" id="plat9" class="checkbox">
-                    <label for="plat9" class="menu-label">
-                        <span class="contain">
-                            <p class="card-text"><strong>Millefeuille croustillant</strong><br>
-                                Myrtilles et pâte d'amande
+                    <article class="card">
+                        <input type="checkbox" id="plat9" class="checkbox">
+                        <label for="plat9" class="menu-label">
+                            <span class="contain">
+                                <h3 class="card-txt">
+                                    Millefeuille croustillant<br>
+                                    <span class="card-txt__subtitle">Myrtilles et pâte d'amande</span>
+                                </h3>
                                 <span class="price">
                                     <span class="card-price">23€</span>
                                     <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                                 </span>
-                            </p>
-                        </span>
-                    </label>
-                </article>
-
-                <div class="button">
-                    <a href="#" class="cta">
-                        <p class="cta-text">Commander</p>
-                    </a>
-                </div>
+                            </span>
+                        </label>
+                    </article>
             </section>
+
+            <div class="button">
+                <a href="#" class="cta">
+                    <p class="cta-text">Commander</p>
+                </a>
+            </div>
+
         </section>
+
     </main>
+
     <footer>
         <div class="footer-container">
-            <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+            <img id="LogoFooter" src="../assets/icons/ohmyfood.png" alt="Logo oh my food">
             <ul>
                 <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                 <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
