--- a/restaurants/la-note.html
+++ b/restaurants/la-note.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/menu.scss">
+    <link rel="stylesheet" href="../styles/menu.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,15 +19,15 @@
 <body>
     <header>
         <nav>
-            <a href="/index.html">
+            <a href="../index.html">
                 <i class="fa-solid fa-arrow-left"></i>
             </a>
         </nav>
-        <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
+        <img id="LogoHeader" src="../assets/icons/ohmyfood.png" alt="Logo oh my food">
     </header>
 
     <div class="top_image">
-        <img src="/assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du Restaurant La note enchantée">
+        <img src="../assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du Restaurant La note enchantée">
     </div>
 
     <main>
@@ -40,87 +41,91 @@
             </div>
 
             <section class="menu-card">
+
                 <div class="title-part E">
                     <h2 class="type-menu">Entrées</h2>
                 </div>
 
-                <section class="entries">
-                    <article class="card">
-                        <input type="checkbox" id="plat" class="checkbox">
-                        <label for="plat" class="menu-label">
-                            <span class="contain">
-                                <p class="card-text"><strong>Ravioles de foie gras</strong><br>
-                                    Accompagnées de leur crème à la truffe
-                                    <span class="price">
-                                        <span class="card-price">25€</span>
-                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                    </span>
-                                </p>
+                <article class="card">
+                    <input type="checkbox" id="plat" class="checkbox">
+                    <label for="plat" class="menu-label">
+                        <span class="contain">
+                            <h3 class="card-txt">
+                                Ravioles de foie gras<br>
+                                <span class="card-txt__subtitle">Accompagnées de leur crème à la truffe</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">25€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </label>
-                    </article>
+                        </span>
+                    </label>
+                </article>
 
-                    <article class="card">
-                        <input type="checkbox" id="plat2" class="checkbox">
-                        <label for="plat2" class="menu-label">
-                            <span class="contain">
-                                <p class="card-text"><strong>Caviar osciètre</strong><br>
-                                    Sur blini à la farine de blé noir
-                                    <span class="price">
-                                        <span class="card-price">35€</span>
-                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                    </span>
-                                </p>
+                <article class="card">
+                    <input type="checkbox" id="plat2" class="checkbox">
+                    <label for="plat2" class="menu-label">
+                        <span class="contain">
+                            <h3 class="card-txt">
+                                Caviar osciètre<br>
+                                <span class="card-txt__subtitle">Sur blini à la farine de blé noir</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">35€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </label>
-                    </article>
+                        </span>
+                    </label>
+                </article>
 
-                    <article class="card">
-                        <input type="checkbox" id="plat3" class="checkbox">
-                        <label for="plat3" class="menu-label">
-                            <span class="contain">
-                                <p class="card-text"><strong>Homard et espuma de potiron</strong><br>
-                                    Marinés aux zestes d'orange
-                                    <span class="price">
-                                        <span class="card-price">20€</span>
-                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                    </span>
-                                </p>
+                <article class="card">
+                    <input type="checkbox" id="plat3" class="checkbox">
+                    <label for="plat3" class="menu-label">
+                        <span class="contain">
+                            <h3 class="card-txt">
+                                Homard et espuma de potiron<br>
+                                <span class="card-txt__subtitle">Marinés aux zestes d'orange</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">20€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </label>
-                    </article>
+                        </span>
+                    </label>
+                </article>
 
-                    <article class="card">
-                        <input type="checkbox" id="plat4" class="checkbox">
-                        <label for="plat4" class="menu-label">
-                            <span class="contain">
-                                <p class="card-text"><strong>Foie gras de canard cuit entier</strong><br>
-                                    Confiture de figue et pain toasté
-                                    <span class="price">
-                                        <span class="card-price">35€</span>
-                                        <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                    </span>
-                                </p>
+                <article class="card">
+                    <input type="checkbox" id="plat4" class="checkbox">
+                    <label for="plat4" class="menu-label">
+                        <span class="contain">
+                            <h3 class="card-txt">
+                                Foie gras de canard cuit entier<br>
+                                <span class="card-txt__subtitle">Confiture de figue et pain toasté</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">35€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
                             </span>
-                        </label>
-                    </article>
-                </section>
+                        </span>
+                    </label>
+                </article>
 
                 <div class="title-part P">
                     <h2 class="type-menu">Plats</h2>
                 </div>
-                
+
                 <article class="card">
                     <input type="checkbox" id="plat5" class="checkbox">
                     <label for="plat5" class="menu-label">
                         <span class="contain">
-                            <p class="card-text"><strong>Noix de coquilles Saint-Jacques</strong><br>
-                                Sur lit de purée de céleri-rave
-                                <span class="price">
-                                    <span class="card-price">40€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
-                            </p>
+                            <h3 class="card-txt">
+                                Noix de coquilles Saint-Jacques<br>
+                                <span class="card-txt__subtitle">Sur lit de purée de céleri-rave</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">40€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                            </span>
                         </span>
                     </label>
                 </article>
@@ -129,13 +134,14 @@
                     <input type="checkbox" id="plat6" class="checkbox">
                     <label for="plat6" class="menu-label">
                         <span class="contain">
-                            <p class="card-text"><strong>Langoustine poêlée</strong><br>
-                                Purée de patate douce
-                                <span class="price">
-                                    <span class="card-price">35€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
-                            </p>
+                            <h3 class="card-txt">
+                                Langoustine poêlée<br>
+                                <span class="card-txt__subtitle">Purée de patate douce</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">35€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                            </span>
                         </span>
                     </label>
                 </article>
@@ -144,13 +150,14 @@
                     <input type="checkbox" id="plat7" class="checkbox">
                     <label for="plat7" class="menu-label">
                         <span class="contain">
-                            <p class="card-text"><strong>Mijoté de queue de bœuf</strong><br>
-                                Et riz sauvage aux zestes de citron
-                                <span class="price">
-                                    <span class="card-price">45€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
-                            </p>
+                            <h3 class="card-txt">
+                                Mijoté de queue de bœuf<br>
+                                <span class="card-txt__subtitle">Et riz sauvage aux zestes de citron</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">45€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                            </span>
                         </span>
                     </label>
                 </article>
@@ -163,13 +170,14 @@
                     <input type="checkbox" id="plat8" class="checkbox">
                     <label for="plat8" class="menu-label">
                         <span class="contain">
-                            <p class="card-text"><strong>Macaron noisette et chocolat</strong><br>
-                                Glace au caramel brun et sel de Guérande
-                                <span class="price">
-                                    <span class="card-price">18€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
-                            </p>
+                            <h3 class="card-txt">
+                                Macaron noisette et chocolat<br>
+                                <span class="card-txt__subtitle">Glace au caramel brun et sel de Guérande</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">18€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                            </span>
                         </span>
                     </label>
                 </article>
@@ -178,13 +186,14 @@
                     <input type="checkbox" id="plat9" class="checkbox">
                     <label for="plat9" class="menu-label">
                         <span class="contain">
-                            <p class="card-text"><strong>Baba au rhum revisité</strong><br>
-                                Avec son coulis de citron
-                                <span class="price">
-                                    <span class="card-price">22€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
-                            </p>
+                            <h3 class="card-txt">
+                                Baba au rhum revisité<br>
+                                <span class="card-txt__subtitle">Avec son coulis de citron</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">22€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                            </span>
                         </span>
                     </label>
                 </article>
@@ -193,37 +202,41 @@
                     <input type="checkbox" id="plat10" class="checkbox">
                     <label for="plat10" class="menu-label">
                         <span class="contain">
-                            <p class="card-text"><strong>Tarte au citron meringuée</strong><br>
-                                Déstructurée
-                                <span class="price">
-                                    <span class="card-price">23€</span>
-                                    <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
-                                </span>
-                            </p>
+                            <h3 class="card-txt">
+                                Tarte au citron meringuée<br>
+                                <span class="card-txt__subtitle">Déstructurée</span>
+                            </h3>
+                            <span class="price">
+                                <span class="card-price">23€</span>
+                                <span class="marque-verif"><i class="fa-solid fa-circle-check fa-lg"></i></span>
+                            </span>
                         </span>
                     </label>
                 </article>
+            </section>
 
-                <div class="button">
-                    <a href="#" class="cta">
-                        <p class="cta-text">Commander</p>
-                    </a>
-                </div>
+            <div class="button">
+                <a href="#" class="cta">
+                    <p class="cta-text">Commander</p>
+                </a>
+            </div>
 
         </section>
+
     </main>
+    
     <footer>
-    <div class="footer-container">
-        <img id="LogoFooter" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
-        <ul>
-            <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
-            <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
-            </li>
-            <li class="footer-text second"><a href="#">Mentions légales</a></li>
-            <li class="footer-text"><a href="#">Contacts</a></li>
-        </ul>
-    </div>
-</footer>
+        <div class="footer-container">
+            <img id="LogoFooter" src="../assets/icons/ohmyfood.png" alt="Logo oh my food">
+            <ul>
+                <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
+                <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
+                </li>
+                <li class="footer-text second"><a href="#">Mentions légales</a></li>
+                <li class="footer-text"><a href="#">Contacts</a></li>
+            </ul>
+        </div>
+    </footer>
 
 </body>
 
